<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navgraph"
    app:startDestination="@id/splashFragment">

    <fragment
        android:id="@+id/splashFragment"
        android:name="com.example.myapplication.fragments.SplashFragment"
        android:label="@string/fragment_splashscreen"
        tools:layout="@layout/fragment_splashscreen">
        <action
            android:id="@+id/action_splashFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
        <action
            android:id="@+id/action_splashFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.myapplication.fragments.LoginFragment"
        android:label="@string/fragment_login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.myapplication.fragments.HomeFragment"
        android:label="@string/fragment_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_menuFragment"
            app:destination="@id/menuFragment" />
    </fragment>
    <fragment
        android:id="@+id/menuFragment"
        android:name="com.example.myapplication.fragments.MenuFragment"
        android:label="@string/fragment_menu"
        tools:layout="@layout/fragment_menu" />
</navigation>