<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar_home"
        layout="@layout/toolbar_home" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="256dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/motif" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_account"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:cardCornerRadius="@dimen/default_corner_radius"
                app:cardUseCompatPadding="true"
                app:contentPadding="@dimen/default_padding"
                app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_greeting"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        tools:text="Good Afternoon !" />

                    <TextView
                        android:id="@+id/txt_fullname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:textStyle="bold"
                        tools:text="Guntur Saputro" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/default_margin"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <androidx.cardview.widget.CardView
                            android:id="@+id/card_qrcode"
                            android:layout_width="56dp"
                            android:layout_height="56dp"
                            android:elevation="@dimen/cardview_default_elevation"
                            app:cardCornerRadius="32dp"
                            app:contentPadding="@dimen/default_padding">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:src="@drawable/ic_baseline_qr_code_24" />
                        </androidx.cardview.widget.CardView>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:paddingHorizontal="@dimen/default_padding">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <TextView
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:ellipsize="end"
                                    android:maxLines="1"
                                    android:text="@string/saldo" />

                                <TextView
                                    android:id="@+id/txt_saldo"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:ellipsize="end"
                                    android:maxLines="1"
                                    android:textStyle="bold"
                                    tools:text="Rp.275.000" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="4dp"
                                android:orientation="horizontal">

                                <TextView
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:ellipsize="end"
                                    android:maxLines="1"
                                    android:text="@string/point" />

                                <TextView
                                    android:id="@+id/txt_poin"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:ellipsize="end"
                                    android:maxLines="1"
                                    android:textColor="@color/lightblue"
                                    android:textStyle="bold"
                                    tools:text="2.500" />
                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <RelativeLayout
                android:id="@+id/view_slider"
                android:layout_width="0dp"
                android:layout_height="@dimen/banner_height"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2">

                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/viewPagerBanner"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/banner_height"
                    android:focusableInTouchMode="true" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingHorizontal="@dimen/default_padding"
                    android:paddingVertical="@dimen/middle_padding">

                    <com.rd.PageIndicatorView
                        android:id="@+id/indicator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="@dimen/default_margin"
                        android:layout_marginLeft="@dimen/default_margin"
                        app:piv_animationType="scale"
                        app:piv_count="3"
                        app:piv_dynamicCount="true"
                        app:piv_interactiveAnimation="true"
                        app:piv_padding="10dp"
                        app:piv_radius="6dp"
                        app:piv_rtl_mode="on"
                        app:piv_selectedColor="@color/darkgrey"
                        app:piv_unselectedColor="@color/lightgrey" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="@dimen/middle_padding"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/btn_view_all_banner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/view_all"
                        android:textColor="@color/lightblue"
                        android:textStyle="bold" />
                </LinearLayout>

            </RelativeLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</LinearLayout>
